add swagger and fix
