# docs/swagger.json
@@ -10,6 +10,85 @@
     "basePath": "/",
     "paths": {
         "/songs": {
+            "get": {
+                "description": "get song from library with filters (eq:, neq:, lt:, gt:), eq: for default",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "get"
+                ],
+                "summary": "Get song with filter",
+                "operationId": "get-song",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "song id",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song title",
+                        "name": "song",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song group",
+                        "name": "music_group",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song link",
+                        "name": "link",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song text",
+                        "name": "text",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "song created at",
+                        "name": "release_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "page of the data",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Song"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/tools.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/tools.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "add song to library",
                 "consumes": [
@@ -70,7 +149,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Delete"
+                    "delete"
                 ],
                 "summary": "Delete song",
                 "operationId": "delete-song",
@@ -126,6 +205,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Song"
                         }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "song id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -156,6 +242,7 @@
             "type": "object",
             "required": [
                 "group",
+                "releaseDate",
                 "song"
             ],
             "properties": {
@@ -170,7 +257,8 @@
                     "type": "string"
                 },
                 "releaseDate": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 1
                 },
                 "song": {
                     "type": "string",
